parser/test/corpus/basics.txt
===============================================================================|
Empty
===============================================================================|
-------------------------------------------------------------------------------|
(source_file)

===============================================================================|
Newlines
===============================================================================|





-------------------------------------------------------------------------------|
(source_file)

===============================================================================|
Whitespace
===============================================================================|

      

    
      
   



-------------------------------------------------------------------------------|
(source_file)

===============================================================================|
Paragraph 1
===============================================================================|
Lorem ipsum
-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (paragraph (inline_content (inline_text))))))

===============================================================================|
Paragraph 2
===============================================================================|

Lorem ipsum

-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (paragraph (inline_content (inline_text))))))

===============================================================================|
Paragraph 3
===============================================================================|

Lorem ipsum
dolor sit amet,
consectetur adipiscing elit

-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (paragraph (inline_content (inline_text))
                      (inline_content (inline_text))
                      (inline_content (inline_text))))))

===============================================================================|
Paragraph 4
===============================================================================|

Lorem ipsum
dolor sit amet,
consectetur adipiscing elit

Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium

At vero eos et
accusamus et iusto
odio dignissimos ducimus
-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (paragraph (inline_content (inline_text))
                      (inline_content (inline_text))
                      (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))
                      (inline_content (inline_text))
                      (inline_content (inline_text))))))

===============================================================================|
Heading 1
===============================================================================|
= Simple heading
-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (heading (inline_content (inline_text))))))

===============================================================================|
Heading 2
===============================================================================|
= Simple heading

== Other heading

== And another heading
-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (heading (inline_content (inline_text))))
    (block (heading (inline_content (inline_text))))
    (block (heading (inline_content (inline_text))))))

===============================================================================|
Heading 3
===============================================================================|

= Simple heading
with additional stuff
which is also part of the heading



== Other heading
and this one is similar

====== And another heading
== but this line doesn't make an additional heading

-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (heading (inline_content (inline_text))
                    (inline_content (inline_text))
                    (inline_content (inline_text))))
    (block (heading (inline_content (inline_text))
                    (inline_content (inline_text))))
    (block (heading (inline_content (inline_text))
                    (inline_content (inline_text))))))

===============================================================================|
Headings and Paragraphs
===============================================================================|

= Simple heading
with additional stuff
which is also part of the heading


Here is a paragraph
split across lines

And here is another paragraph




And another


== Other heading
and this one is similar

And another

And another

====== And another heading
== but this line doesn't make an additional heading

And another




And another
-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (heading (inline_content (inline_text))
                    (inline_content (inline_text))
                    (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))
                      (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))
    (block (heading (inline_content (inline_text))
                    (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))
    (block (heading (inline_content (inline_text))
                    (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))
    (block (paragraph (inline_content (inline_text))))))

===============================================================================|
Horizontal Rule 1
===============================================================================|
---
-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (horizontal_rule))))

===============================================================================|
Horizontal Rule 2
===============================================================================|

---

--------------------------------------------------------------------------------




----------

-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (horizontal_rule))
    (block (horizontal_rule))
    (block (horizontal_rule))))

===============================================================================|
Scripting 1
===============================================================================|

== <<<ctx.counter("headings")>>> This heading has a leading number built from a counter

-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block (heading (inline_content
                      (scripting (script_content))
                      (inline_text))))))

===============================================================================|
Scripting with interpolation 1
===============================================================================|

something <<< do(() => {
  console.log(##
== This is a heading
  ##);
  console.log(## == This is another heading ##);
  console.log(##== This is yet another heading##);
}) >>> or other

-------------------------------------------------------------------------------|
(source_file
  (block_list
    (block
      (paragraph
        (inline_content
          (inline_text)
          (scripting
            (script_content
              (script_interpolation
                (block
                  (heading
                    (inline_content
                      (inline_text)))))
              (script_interpolation
                (block
                  (paragraph
                    (inline_content
                      (inline_text)))))
              (script_interpolation
                (block
                  (heading
                    (inline_content
                      (inline_text)))))))
          (inline_text))))))
